# pro-rag

./: .env.example  .gitignore  DEVELOPMENT_RULES.md  Makefile  README.md  docker-compose.yml
core-api-go/: Dockerfile  go.mod  go.sum
docs/: ARCHITECTURE.md  DECISIONS.md
embed-svc/: Dockerfile  app.py
eval/: questions.jsonl  run_eval.py  run_redteam.py
ingest/: Dockerfile  pyproject.toml
ingest-api/: Dockerfile  app.py  requirements.txt
ingest-worker/: Dockerfile  app.py  requirements.txt
ingest/eval/: results_full.csv  results_full.summary.json
ingest/ingest/: __init__.py  cli.py  config.py  pipeline.py
ingest/ingest/chunk/: __init__.py  chunker.py  metadata.py
ingest/ingest/db/: __init__.py  writer.py
ingest/ingest/embed/: __init__.py  embedder.py
ingest/ingest/extract/: __init__.py  docx.py  html.py  pdf.py
ingest/ingest/fts/: __init__.py  generator.py
ingest/tests/: test_chunker.py  test_docx_extractor.py  test_html_extractor.py  test_metadata.py  test_pdf_extractor.py  test_placeholder.py
migrate/: run.sh
migrations/: 001_extensions.sql  002_tenants.sql  003_documents.sql  004_document_versions.sql  005_chunks.sql  006_chunk_embeddings.sql  007_chunk_fts.sql  008_ingestion_runs.sql  009_users.sql  010_documents_orchestration.sql  011_ingestion_runs_orchestration.sql  seed.sql
plans/: implementation-plan.md  implementation-spec-go-orchestrated-ingestion-v2.3.md  pr-checklist-go-orchestrated-ingestion-v2.3.md  ragstack_rag_poc_spec_v7.md  web-ui-spec.md
scripts/: e2e_smoke.sh  e2e_web.sh  gen_corpus_docx.py  gen_corpus_html.py  (+3 more)
(+65 files in other folders)
